[package]
name = "eclipse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
color-rs = "0.7.1"
glam = "0.24.0"
input = "0.8.2"
input-event-codes = "5.16.8"
libc = "0.2.145"
mint = "0.5.9"
serde = { version = "1.0.163", features = ["serde_derive"] }
stardust-xr-fusion = "0.41.0"
stardust-xr-molecules = "0.26.0"
tokio = { version = "1.28.2", features = ["rt", "tokio-macros", "sync"] }
xkbcommon = { version = "0.5.0", default-features = false }
